# pingmon

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  run.sh
docs/superpowers/specs/: 2026-06-30-ssh-panels-design.md
packaging/: pingmon.rb  pingmon.spec
pingmon/: __init__.py  app.py  app.tcss  config.py  netutil.py  pinger.py  render.py  scoring.py  stats.py  terminal.py
research/: feature-ideas-2026-06-29.md  host-selection-2026-06-29.md  packaging-native-install-2026-06-29.md
tools/: screenshots.py
