[project]
name = "pingmonitor"
version = "1.1.0"
description = "TUI monitor of latency and availability to servers by country"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "pingmon contributors" }]
keywords = ["tui", "ping", "latency", "network", "monitoring", "textual", "geoip"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Monitoring",
]
dependencies = ["textual>=0.80"]

[project.urls]
Homepage = "https://github.com/kottot13/pingmon"
Repository = "https://github.com/kottot13/pingmon"

[project.scripts]
pingmon = "pingmon.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pingmon"]

# Ship the Textual stylesheet (non-Python file) inside the package.
[tool.hatch.build.targets.wheel.force-include]
"pingmon/app.tcss" = "pingmon/app.tcss"
